fixed task boxes to align w/ key boxes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -171,12 +171,16 @@ button.key:active {
     outline: none;
 }
 
+.content {
+  display: grid;
+}
+
 section .container {
-    margin-top: 30px;
+    margin-top: 110px;
     position: absolute;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    margin-left: 300px;
 }
 
 section .container .fas, section .container .fab {
